--- a/public/explore.html
+++ b/public/explore.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Explore Campaigns - TrackRepost</title>
-  <link rel="stylesheet" href="styles.css"/>
+  <link rel="stylesheet" href="styles.css" />
 
-  <!-- Firebase -->
+  <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
@@ -14,57 +14,64 @@
   <script>firebase.initializeApp(window.firebaseConfig);</script>
 
   <style>
-    .explore-container {
-      max-width: 1200px;
-      margin: 40px auto;
+    .explore-grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
       gap: 20px;
-      padding: 0 20px;
+      padding: 20px;
     }
 
     .campaign-card {
-      background: #1e1e1e;
+      background-color: #1a1a1a;
+      border: 1px solid #333;
       border-radius: 12px;
-      padding: 15px;
-      color: white;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
+      padding: 16px;
       text-align: center;
+      color: white;
     }
 
     .campaign-card img {
-      max-width: 100%;
-      border-radius: 10px;
-      margin-bottom: 10px;
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 8px;
+      background-color: #222;
     }
 
     .campaign-card h3 {
       font-size: 18px;
-      margin: 5px 0;
+      color: #ff9900;
+      margin: 10px 0 4px;
     }
 
     .campaign-card p {
-      margin: 5px 0;
       font-size: 14px;
+      color: #ccc;
+      margin: 2px 0;
     }
 
-    .campaign-card a {
-      color: #ff9900;
-      text-decoration: none;
+    .campaign-card a.button {
+      display: inline-block;
+      margin-top: 12px;
+      background-color: #ff9900;
+      color: black;
+      padding: 10px 16px;
       font-weight: bold;
+      border-radius: 8px;
+      text-decoration: none;
     }
 
-    .campaign-card a:hover {
-      text-decoration: underline;
+    .campaign-card a.button:hover {
+      background-color: #e68300;
     }
   </style>
 </head>
 <body>
   <div id="site-header"></div>
 
-  <main>
-    <h2 style="text-align:center; margin-top: 30px;">🌎 Explore New Campaigns</h2>
-    <div id="explore-campaigns" class="explore-container">
+  <main class="container">
+    <h1 style="text-align:center;">🌍 Explore Campaigns</h1>
+    <div class="explore-grid" id="explore-feed">
       <p>Loading campaigns...</p>
     </div>
   </main>
@@ -76,29 +83,29 @@
   <script type="module" src="/js/header.js"></script>
   <script>
     const db = firebase.firestore();
-    const container = document.getElementById("explore-campaigns");
+    const feed = document.getElementById("explore-feed");
 
     async function loadCampaigns() {
       const snapshot = await db.collection("campaigns").orderBy("createdAt", "desc").get();
-      if (snapshot.empty) {
-        container.innerHTML = "<p>No campaigns found.</p>";
-        return;
-      }
 
-      container.innerHTML = "";
+      feed.innerHTML = "";
       snapshot.forEach(doc => {
         const data = doc.data();
         const card = document.createElement("div");
         card.className = "campaign-card";
+
+        const fallbackImage = "/images/placeholder-artwork.jpg";
+
         card.innerHTML = `
-          <img src="${data.artworkUrl}" alt="Artwork" />
-          <h3>${data.title}</h3>
-          <p>by ${data.artist}</p>
-          <p><strong>Genre:</strong> ${data.genre}</p>
-          <p><strong>Credits Left:</strong> ${data.credits}</p>
-          <a href="track-details.html?id=${doc.id}">🎧 View Details</a>
+          <img src="${data.artworkUrl || fallbackImage}" alt="Artwork">
+          <h3>${data.title || "Untitled"}</h3>
+          <p>🎧 ${data.artist || "Unknown Artist"}</p>
+          <p>🎵 ${data.genre}</p>
+          <p>🔥 ${data.credits} credits left</p>
+          <a class="button" href="repost-action.html?id=${doc.id}">Repost This Track</a>
         `;
-        container.appendChild(card);
+
+        feed.appendChild(card);
       });
     }
 
@@ -106,4 +113,5 @@
   </script>
 </body>
 </html>
+
 
