--- a/public/explore.html
+++ b/public/explore.html
@@ -2,110 +2,99 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Explore Campaigns - TrackRepost</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Explore - TrackRepost</title>
   <link rel="stylesheet" href="styles.css" />
 
-  <!-- Firebase SDKs -->
+  <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
   <script src="/js/firebaseConfig.js"></script>
   <script>firebase.initializeApp(window.firebaseConfig);</script>
 
   <style>
-    .explore-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-      gap: 20px;
-      padding: 20px;
-    }
-
-    .campaign-card {
-      background-color: #1a1a1a;
-      border: 1px solid #333;
+    .track-card {
+      background: #1e1e1e;
+      color: white;
       border-radius: 12px;
       padding: 16px;
-      text-align: center;
-      color: white;
+      margin: 16px auto;
+      max-width: 600px;
+      box-shadow: 0 0 12px rgba(0, 0, 0, 0.3);
     }
 
-    .campaign-card img {
+    .track-card img {
       width: 100%;
-      height: 200px;
-      object-fit: cover;
-      border-radius: 8px;
-      background-color: #222;
+      border-radius: 12px;
     }
 
-    .campaign-card h3 {
-      font-size: 18px;
-      color: #ff9900;
-      margin: 10px 0 4px;
+    .track-card h3 {
+      margin-top: 12px;
+      font-size: 20px;
     }
 
-    .campaign-card p {
+    .track-card p {
       font-size: 14px;
       color: #ccc;
-      margin: 2px 0;
     }
 
-    .campaign-card a.button {
+    .track-card a {
       display: inline-block;
-      margin-top: 12px;
-      background-color: #ff9900;
-      color: black;
-      padding: 10px 16px;
-      font-weight: bold;
-      border-radius: 8px;
-      text-decoration: none;
+      margin-top: 10px;
+      color: #f90;
     }
 
-    .campaign-card a.button:hover {
-      background-color: #e68300;
+    header, footer {
+      text-align: center;
+      color: white;
+      background: #121212;
+      padding: 16px;
     }
   </style>
 </head>
 <body>
-  <div id="site-header"></div>
+  <header>
+    <h1>🎵 Explore Tracks</h1>
+  </header>
 
-  <main class="container">
-    <h1 style="text-align:center;">🌍 Explore Campaigns</h1>
-    <div class="explore-grid" id="explore-feed">
-      <p>Loading campaigns...</p>
-    </div>
+  <main id="explore-container" class="container">
+    <p>Loading campaigns...</p>
   </main>
 
   <footer>
-    <p>© 2025 TrackRepost. All Rights Reserved.</p>
+    <p>© 2025 TrackRepost</p>
   </footer>
 
-  <script type="module" src="/js/header.js"></script>
   <script>
     const db = firebase.firestore();
-    const feed = document.getElementById("explore-feed");
+    const container = document.getElementById("explore-container");
 
     async function loadCampaigns() {
       const snapshot = await db.collection("campaigns").orderBy("createdAt", "desc").get();
 
-      feed.innerHTML = "";
+      if (snapshot.empty) {
+        container.innerHTML = "<p>No campaigns available.</p>";
+        return;
+      }
+
+      container.innerHTML = "";
       snapshot.forEach(doc => {
-        const data = doc.data();
-        const card = document.createElement("div");
-        card.className = "campaign-card";
+        const track = doc.data();
 
-        const fallbackImage = "/images/placeholder-artwork.jpg";
+        // 🛠️ Fix for broken artwork
+        const imageUrl = (track.artworkUrl && !track.artworkUrl.includes("0000000000000000"))
+          ? track.artworkUrl
+          : "/images/default-art.png";
 
-        card.innerHTML = `
-          <img src="${data.artworkUrl || fallbackImage}" alt="Artwork">
-          <h3>${data.title || "Untitled"}</h3>
-          <p>🎧 ${data.artist || "Unknown Artist"}</p>
-          <p>🎵 ${data.genre}</p>
-          <p>🔥 ${data.credits} credits left</p>
-          <a class="button" href="repost-action.html?id=${doc.id}">Repost This Track</a>
+        const div = document.createElement("div");
+        div.className = "track-card";
+        div.innerHTML = `
+          <img src="${imageUrl}" alt="Track Artwork" />
+          <h3>${track.title || "Untitled"} by ${track.artist || "Unknown"}</h3>
+          <p>Genre: ${track.genre}</p>
+          <a href="${track.trackUrl}" target="_blank">🔗 Listen on SoundCloud</a>
         `;
-
-        feed.appendChild(card);
+        container.appendChild(div);
       });
     }
 
@@ -113,5 +102,6 @@
   </script>
 </body>
 </html>
+
 
 
