--- a/public/explore.html
+++ b/public/explore.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -41,8 +40,10 @@
 
     .campaign-card img {
       width: 100%;
-      height: auto;
+      height: 200px;
+      object-fit: cover;
       display: block;
+      background: #222;
     }
 
     .card-info {
