--- a/public/explore.html
+++ b/public/explore.html
@@ -11,68 +11,77 @@
   <script src="/js/firebaseConfig.js"></script>
   <script>firebase.initializeApp(window.firebaseConfig);</script>
   <style>
-    .campaign-card {
-      display: flex;
-      background-color: #1a1a1a;
+    body {
+      background: #111;
       color: #fff;
-      border-radius: 12px;
-      margin-bottom: 16px;
-      padding: 12px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.4);
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
     }
 
-    .artwork {
+    .container {
+      max-width: 800px;
+      margin: 0 auto;
+      padding: 20px;
+    }
+
+    h1 {
+      text-align: center;
+      color: #ffcc00;
+      margin-bottom: 20px;
+    }
+
+    .campaign-card {
+      display: flex;
+      background: #1e1e1e;
+      border-radius: 10px;
+      padding: 10px;
+      margin-bottom: 15px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.3);
+      align-items: center;
+    }
+
+    .campaign-card img {
       width: 100px;
       height: 100px;
       object-fit: cover;
       border-radius: 8px;
-      margin-right: 16px;
+      margin-right: 15px;
     }
 
-    .campaign-info {
-      flex: 1;
+    .campaign-details {
+      flex-grow: 1;
     }
 
-    .campaign-info h3 {
-      margin: 0 0 4px;
+    .campaign-details h3 {
+      margin: 0 0 5px;
       font-size: 18px;
-      color: #ffcc00;
+      color: #fff;
     }
 
-    .campaign-info p {
-      margin: 4px 0;
+    .campaign-details p {
+      margin: 2px 0;
       font-size: 14px;
+      color: #ccc;
     }
 
     .campaign-buttons {
-      margin-top: 10px;
+      margin-top: 8px;
     }
 
     .campaign-buttons a {
       display: inline-block;
       margin-right: 10px;
-      padding: 6px 12px;
-      background-color: #333;
+      padding: 6px 10px;
+      background: #333;
       color: #fff;
-      border-radius: 6px;
       text-decoration: none;
+      border-radius: 5px;
       font-size: 13px;
     }
 
-    .container {
-      max-width: 700px;
-      margin: 0 auto;
-      padding: 24px;
-    }
-
-    body {
-      background: #121212;
-      font-family: sans-serif;
-    }
-
-    h1 {
-      color: #fff;
-      text-align: center;
+    .campaign-buttons a:hover {
+      background: #555;
     }
   </style>
 </head>
@@ -87,24 +96,24 @@
     const feed = document.getElementById("campaign-feed");
 
     function renderCampaign(data, id) {
-      const div = document.createElement("div");
-      div.className = "campaign-card";
+      const card = document.createElement("div");
+      card.className = "campaign-card";
 
-      div.innerHTML = `
-        <img class="artwork" src="${data.artworkUrl}" alt="Artwork" />
-        <div class="campaign-info">
+      card.innerHTML = `
+        <img src="${data.artworkUrl}" alt="Artwork" />
+        <div class="campaign-details">
           <h3>${data.title}</h3>
           <p>👤 ${data.artist}</p>
           <p>🎵 ${data.genre}</p>
-          <p>💰 ${data.credits} credits available</p>
+          <p>💰 ${data.credits} credits</p>
           <div class="campaign-buttons">
             <a href="${data.trackUrl}" target="_blank">▶️ Listen</a>
-            <a href="repost-action.html?id=${id}">♻️ Repost & Earn</a>
+            <a href="repost-action.html?id=${id}">♻️ Repost</a>
           </div>
         </div>
       `;
 
-      feed.appendChild(div);
+      feed.appendChild(card);
     }
 
     db.collection("campaigns").orderBy("createdAt", "desc").get().then(snapshot => {
@@ -113,6 +122,7 @@
   </script>
 </body>
 </html>
+
 
 
 
