--- a/public/explore.html
+++ b/public/explore.html
@@ -3,90 +3,101 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Explore - TrackRepost</title>
+  <title>Explore Campaigns - TrackRepost</title>
   <link rel="stylesheet" href="styles.css" />
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore-compat.js"></script>
   <script src="/js/firebaseConfig.js"></script>
-  <script>
-    firebase.initializeApp(window.firebaseConfig);
-  </script>
+  <script>firebase.initializeApp(window.firebaseConfig);</script>
   <style>
-    .campaign-card {
-      display: flex;
-      align-items: center;
-      background: #1e1e1e;
-      border-radius: 12px;
-      padding: 12px;
-      margin-bottom: 16px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.3);
-      color: white;
-    }
-
-    .campaign-art {
-      width: 80px;
-      height: 80px;
-      border-radius: 10px;
-      object-fit: cover;
-      margin-right: 16px;
-      flex-shrink: 0;
-    }
-
-    .campaign-info {
-      flex-grow: 1;
-    }
-
-    .campaign-info h3 {
-      margin: 0 0 4px;
-      font-size: 16px;
-    }
-
-    .campaign-info p {
-      margin: 2px 0;
-      font-size: 14px;
-      color: #ccc;
-    }
-
     body {
-      background: #121212;
+      background-color: #121212;
       color: white;
-      font-family: sans-serif;
+      font-family: Arial, sans-serif;
       padding: 20px;
     }
 
     h1 {
       text-align: center;
-      margin-bottom: 24px;
+      margin-bottom: 30px;
+    }
+
+    .campaign-grid {
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
+    }
+
+    .campaign-card {
+      display: flex;
+      background: #1e1e1e;
+      padding: 12px;
+      border-radius: 12px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.4);
+      align-items: center;
+    }
+
+    .campaign-image {
+      width: 80px;
+      height: 80px;
+      border-radius: 8px;
+      object-fit: cover;
+      margin-right: 16px;
+    }
+
+    .campaign-details {
+      flex-grow: 1;
+    }
+
+    .campaign-details h3 {
+      font-size: 16px;
+      margin: 0;
+    }
+
+    .campaign-details p {
+      font-size: 14px;
+      margin: 4px 0;
+      color: #ccc;
+    }
+
+    .repost-button {
+      background: #ff9900;
+      color: black;
+      border: none;
+      padding: 8px 12px;
+      border-radius: 6px;
+      cursor: pointer;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <h1>🌍 Explore Repost Campaigns</h1>
-  <div id="campaign-feed"></div>
+  <h1>🔥 Explore Campaigns</h1>
+  <div id="campaigns" class="campaign-grid"></div>
 
   <script>
     const db = firebase.firestore();
-    const feed = document.getElementById("campaign-feed");
+    const container = document.getElementById("campaigns");
 
     async function loadCampaigns() {
-      const snap = await db.collection("campaigns").orderBy("createdAt", "desc").get();
+      const snapshot = await db.collection("campaigns").orderBy("createdAt", "desc").get();
+      container.innerHTML = "";
 
-      snap.forEach(doc => {
-        const c = doc.data();
-
-        const card = document.createElement("div");
-        card.className = "campaign-card";
-
-        card.innerHTML = `
-          <img src="${c.artworkUrl}" class="campaign-art" onerror="this.src='/assets/default-art.png'" />
-          <div class="campaign-info">
-            <h3>${c.title}</h3>
-            <p>by ${c.artist}</p>
-            <p>${c.genre} • ${c.credits} credits</p>
+      snapshot.forEach(doc => {
+        const data = doc.data();
+        const div = document.createElement("div");
+        div.className = "campaign-card";
+        div.innerHTML = `
+          <img class="campaign-image" src="${data.artworkUrl || '/assets/default-art.png'}" alt="Artwork" />
+          <div class="campaign-details">
+            <h3>${data.title || 'Untitled'}</h3>
+            <p>By ${data.artist || 'Unknown Artist'}</p>
+            <p>${data.genre || 'Genre'} • ${data.credits} credits</p>
           </div>
+          <button class="repost-button" onclick="location.href='repost-action.html?id=${doc.id}'">Repost</button>
         `;
-
-        feed.appendChild(card);
+        container.appendChild(div);
       });
     }
 
