--- a/public/repost-action.html
+++ b/public/repost-action.html
@@ -15,85 +15,99 @@
 
   <style>
     .repost-box {
-      max-width: 800px;
-      margin: 40px auto;
-      padding: 20px;
-      background-color: #1c1c1c;
-      color: #fff;
+      background: #111;
       border-radius: 12px;
+      padding: 20px;
+      margin: 20px auto;
+      max-width: 500px;
+      box-shadow: 0 0 10px #000;
+      color: #fff;
     }
 
-    .repost-box h2 {
-      margin-bottom: 10px;
+    .artwork {
+      width: 100px;
+      height: 100px;
+      border-radius: 8px;
+      object-fit: cover;
+    }
+
+    .track-meta {
+      display: flex;
+      align-items: center;
+      gap: 15px;
+    }
+
+    .meta-info {
+      flex: 1;
+    }
+
+    .meta-info h2 {
+      margin: 0;
+      font-size: 20px;
+    }
+
+    .meta-info p {
+      margin: 4px 0;
+      color: #aaa;
     }
 
     iframe {
       width: 100%;
       height: 166px;
-      margin: 15px 0;
-      border-radius: 10px;
+      border-radius: 12px;
+      margin-top: 10px;
     }
 
-    .repost-options label {
-      display: block;
-      margin: 10px 0;
+    .repost-form {
+      margin-top: 15px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
     }
 
-    .repost-options textarea {
+    .repost-form label {
+      font-size: 15px;
+    }
+
+    .repost-form textarea {
       width: 100%;
       height: 60px;
-      border-radius: 6px;
+      border-radius: 8px;
       padding: 8px;
-      margin-top: 6px;
-      font-size: 14px;
     }
 
-    .submit-btn {
-      margin-top: 20px;
-      padding: 12px 20px;
-      font-size: 16px;
-      font-weight: bold;
+    button {
+      background-color: #ff5500;
       border: none;
-      background-color: #4caf50;
-      color: white;
+      padding: 10px;
       border-radius: 8px;
+      color: white;
+      font-size: 16px;
       cursor: pointer;
     }
 
-    .submit-btn:hover {
-      background-color: #43a047;
+    button:hover {
+      background-color: #e64a00;
     }
 
     .status-message {
-      margin-top: 20px;
+      margin-top: 10px;
       font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <div id="site-header"></div>
+  <header id="site-header"></header>
 
-  <div class="repost-box">
-    <h2>🔁 Repost This Track & Earn Credits</h2>
-    <div id="track-info">Loading...</div>
-    <form id="repost-form" class="repost-options" style="display: none;">
-      <label><input type="checkbox" id="like" checked /> 💖 Like this track (+1 credit)</label>
-      <label><input type="checkbox" id="follow" checked /> 👣 Follow the artist (+2 credits)</label>
-      <label><input type="checkbox" id="comment" /> 💬 Leave a comment (+2 credits)</label>
-      <textarea id="commentText" placeholder="Optional comment..."></textarea>
-      <button type="submit" class="submit-btn">✅ Complete Repost</button>
-    </form>
-    <div id="status" class="status-message"></div>
-  </div>
+  <main class="repost-box" id="repost-container">
+    <p>Loading campaign...</p>
+  </main>
 
-  <footer>
-    <p>© 2025 TrackRepost. All Rights Reserved.</p>
-  </footer>
-
-  <script type="module" src="/js/header.js"></script>
-  <script src="/js/repost-action.js"></script>
+  <script src="/js/header.js" defer></script>
+  <script src="/js/repost-action.js" type="module"></script>
 </body>
 </html>
+
 
 
 
